@@ -12,6 +12,8 @@ The following artwork has been contributed to this package:
 sidux puss-wah gdm theme 
 Copyright (C) 2007  by Bernard Gray <bernard.gray@gmail.com>
 License: GPL2 or later
+	Config is based on, and some icons taken from debian-moreblue gdm theme
+	Copyright 2006 Andre Luiz Rodrigues Ferreira, License GPLv2
 
 All other files contained within this distribution are covered by the GPL
 license v2 or later.
