@@ -3,6 +3,6 @@ Author=Bernard Gray
 Copyright=GPL
 Description="sidux 2007-03" theme based loosely on "true-nature" by Stephen Spies
 Encoding=UTF-8
-Greeter=config.xml
+Greeter=sidux-gaia.xml
 Name=sidux-gaia
 Screenshot=screenshot.png
