@@ -1,9 +1,14 @@
 sidux-art-gnome-gaia (0.0.2) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
   * add VCS control headers.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 11 Sep 2007 20:20:52 +0200
+  [ Bernard Gray ]
+  * update sidux-gaia gdm theme so it works 
+   - based on debian-moreblue (copyright updated)
+
+ -- Bernard Gray <bernard.gray@gmail.com>  Wed, 19 Sep 2007 23:53:34 +1000
 
 sidux-art-gnome-gaia (0.0.1) unstable; urgency=low
 
